--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Generate contribution image
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_GITHUB_TOKEN }}
-        run: python generate_contributions_image.py
+        run: python generate_contributions_image.png
